h1. CHANGELOG

h2. 2.2.37 March 26, 2013

* accommodate old Ruby syntax in 'gems' recipe
* fix 'gems' recipe to provide 'pg' or 'mysql2' gems if requested
* update gem 'pg' to 0.15.0
* update gem 'capybara' to 2.0.3
* update gem 'zurb-foundation' to 4.0.9

h2. 2.2.36 March 17, 2013

* in 'extras' recipe, set correct Ruby version in .rvmrc file

h2. 2.2.35 March 17, 2013

* in 'extras' recipe, allow rvmrc option to be set in default file (contributed by Alex Takitani)
* update 'gems' recipe to accommodate Ruby 2.0.0
* update gem 'bootstrap-sass' to 2.3.1.0
* update gem 'cucumber-rails' to 1.3.1
* update gem 'zurb-foundation' to 4.0.8
* update gem 'figaro' to 0.6.3
* update gem 'better_errors' to 0.7.2
* update gem 'database_cleaner' to 1.0.0.RC1
* update gem 'mongoid-rspec' to 1.7.0
* update gem 'simple_form' to 2.1.0
* update gem 'httpclient' to 2.3.3
* update gem 'mongoid' to 3.1.2
* update gem 'google_visualr' to 2.1.7
* update gem 'quiet_assets' to 1.0.2
* update gem 'stripe' to 1.7.11
* update gem 'cancan' to 1.6.9
* update gem 'countries' to 0.9.2

h2. 2.2.34 February 20, 2013

* in 'extras' recipe, don't ask about adding .rvmrc file if it already exists
* don't install 'binding_of_caller' gem in non-MRI/Rubinius Ruby implementations (contributed by dalton)
* update gem 'mongoid' to 3.1.1
* update gem 'twitter-bootstrap-rails' to 2.2.4
* update gem 'binding_of_caller' to 0.7.1
* update gem 'html2haml' to 1.0.1
* minor fix to 'init' recipe

h2. 2.2.33 February 16, 2013

* fix color for question prompt (https://github.com/RailsApps/rails_apps_composer/issues/161)
* fix inconsistent use of EOF newline (https://github.com/RailsApps/rails_apps_composer/issues/160)
* fix when application.yml is not selected (https://github.com/RailsApps/rails_apps_composer/issues/159)

h2. 2.2.32 February 14, 2013

* add gem 'html2haml' version 1.0.0
* update gem 'haml-rails' to 0.4
* update gem 'slim' to 2.0.0.pre.6
* update gem 'bootstrap-sass' to 2.3.0.0